--- a/package.json
+++ b/package.json
@@ -9,20 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "howler": "^2.2.4",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tone": "^15.1.22",
-    "wavesurfer.js": "^7.11.1"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@types/howler": "^2.2.12",
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.22",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/node": "^24.10.1",
+    "@vitejs/plugin-react": "^5.1.1",
+    "tailwindcss": "^4.1.17",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.6"
   }
 }
