--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "essentia.js": "^0.1.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
