--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "essentia.js": "^0.1.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "rubberband-wasm": "^3.3.0"
   },
   "devDependencies": {
